FullSb1-27-apr-15/src/objects/Alumni_Employment__c.object
<CustomObject>
    <description>This object contains information on alumni and student employment data. Not to be confused with custom object Employment_Survey__c which is designed as a Career Services/Momthcil tool to capture a students employment status around graduation time to be used for stats.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>The name of the city in which the student/alumni&apos;s position is based.</description>
        <inlineHelpText>The name of the city in which the student/alumni&apos;s position is based.</inlineHelpText>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Alumni Employment</relationshipLabel>
        <relationshipName>Alumni_Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>The name of the company which the student/alumni works for.</description>
        <inlineHelpText>The name of the company which the student/alumni works for.</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Employment__c</fullName>
        <description>The country which the student/alumni&apos;s position is based in.</description>
        <inlineHelpText>The country which the student/alumni&apos;s position is based in.</inlineHelpText>
        <label>Country of Employment</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Alumni Employment</relationshipLabel>
        <relationshipName>Alumni_Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>The name of the student/alumni who works at the company</description>
        <inlineHelpText>The name of the student/alumni who works at the company</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alumni Employment</relationshipLabel>
        <relationshipName>Alumni_Employment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <description>The start date for the said position.</description>
        <inlineHelpText>The start date for the said position.</inlineHelpText>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>The function of the said position.</description>
        <inlineHelpText>The function of the said position.</inlineHelpText>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development and Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain/ Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hult_Corporate_Relations_Company__c</fullName>
        <description>A lookup to the Accounts held by Talent Solution within HCP.</description>
        <inlineHelpText>A lookup to the Accounts held by Talent Solution within HCP.</inlineHelpText>
        <label>Hult Corporate Relations Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alumni Employment</relationshipLabel>
        <relationshipName>Alumni_Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>The predominant industry which the said company operates within.</description>
        <inlineHelpText>The predominant industry which the said company operates within.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel / Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive / Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation/Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking / Finance / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers / Industry Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting / Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Natural Resources/Mining/Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government / Not For Profit / NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headhunting / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the said position is an internship</description>
        <inlineHelpText>Checked if the said position is an internship</inlineHelpText>
        <label>Internship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>The name of the position which the student hold with said company</description>
        <inlineHelpText>The name of the position which the student hold with said company</inlineHelpText>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Own_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the said company was setup by the student/alumni.</description>
        <inlineHelpText>Checked if the said company was setup by the student/alumni.</inlineHelpText>
        <label>Setup Own Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Society_Memberships__c</fullName>
        <description>A list of any professional societies of which the alumnus is a member of.</description>
        <inlineHelpText>A list of any professional societies of which the alumnus is a member of.</inlineHelpText>
        <label>Society Memberships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visible_to_Employers__c</fullName>
        <description>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to external employers</description>
        <formula>IF(INCLUDES(Employee__r.Alumni_Privacy_Wuf__c, &quot;Employers&quot;) , TRUE, FALSE)</formula>
        <inlineHelpText>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to external employers</inlineHelpText>
        <label>Visible to Employers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_to_Prospective_Students__c</fullName>
        <description>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to prospective students.</description>
        <formula>IF(INCLUDES(Employee__r.Alumni_Privacy_Wuf__c, &quot;Prospective students&quot;), TRUE, FALSE)</formula>
        <inlineHelpText>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to prospective students.</inlineHelpText>
        <label>Visible to Prospective Students?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_to_other_Current_Students__c</fullName>
        <description>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to current Hult students</description>
        <formula>IF(INCLUDES(Employee__r.Alumni_Privacy_Wuf__c, &quot;Current students&quot;) , TRUE, FALSE)</formula>
        <inlineHelpText>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to current Hult students</inlineHelpText>
        <label>Visible to other Current Students?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_to_other_Other_Alumni__c</fullName>
        <description>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to other Hult alumni.</description>
        <formula>IF(INCLUDES( Employee__r.Alumni_Privacy_Wuf__c, &quot;Other Alumni&quot;), TRUE, FALSE)</formula>
        <inlineHelpText>Alumnus chosen Privacy Preferences. If selected they do not want their employment details (Alumni Employment records) visible to other Hult alumni.</inlineHelpText>
        <label>Visible to other Other Alumni?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wufoo_Form_Date__c</fullName>
        <description>The date the student/alumni submitted the Wufoo form.</description>
        <inlineHelpText>The date the student/alumni submitted the Wufoo form.</inlineHelpText>
        <label>Wufoo Form Entry Date</label>
        <type>Date</type>
    </fields>
    <label>Alumni Employment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni Employment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>